# yc-agents

./: .env.example  .gitignore  README.md  YC-start.cmd  YCORE.md  main.py  mcp_servers.json  pyproject.toml  requirements.txt  ycore.json  启动YC Agents桌面版.cmd
.ycore/: current_session  workspace.json
data/: workspaces.json
data/RAG_knowledge/: ycore-overview.md
desktop/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
desktop/.electron-dist/: bootstrap.js  bootstrap.js.map  main.js  main.js.map  preload.cjs  preload.cjs.map  preload.js  preload.js.map  projectDialog.js  projectDialog.js.map  pythonService.js  pythonService.js.map
desktop/electron/: main.ts  (+5 more)
docs/: architecture.md  demo-script.md  eval-run-20260630-211458.md  evaluation-report.md  interview-notes.md
scripts/: demo_eval_run.py  test.ps1
tests/: test_analytics_config.py  test_analytics_recorder.py  test_analytics_schema.py  test_branding.py  test_cli_app.py  test_cli_commands.py  test_cli_entrypoint.py  test_cli_runtime_factory.py  test_cli_sessions.py  test_cli_sidebar.py  test_cli_status.py  test_cli_suggestions.py  test_cli_workspaces.py  test_code_search_tool.py  test_command_reader_tool.py  test_context_manager.py  test_demo_eval_run.py  test_desktop_app.py  test_desktop_code_projects.py  test_desktop_dependencies.py  test_desktop_documents.py  test_desktop_runs.py  test_desktop_runtime_adapter.py  test_desktop_sessions.py  test_desktop_settings.py  test_desktop_storage.py  test_desktop_websocket.py  test_document_format_normalizer_demo.py  test_docx_format_analyzer.py  test_docx_format_auditor.py  test_docx_format_formatter.py  test_docx_format_normalizer_tool.py  test_docx_format_pipeline.py  test_docx_format_template.py  test_embedding_provider.py  test_enhanced_demo.py  test_episode.py  test_eval_case_content.py  test_eval_metrics.py  test_eval_runner.py  (+54 more)
(+186 files in other folders)
