[project]
name = "ycore"
version = "0.1.0"
description = "YCore is a skill-driven research Agent runtime for graduate research workflows."
requires-python = ">=3.11"
dependencies = [
  "openai",
  "python-dotenv",
  "python-docx",
  "PyYAML",
  "numpy",
  "rank-bm25",
  "pypdf",
  "textual"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
